apps/jenkins/solutions/app-repo-files/k8s/ingress/prod/pets-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "600"
  name: pets
spec:
  rules:
  - host: pets-prod-cloudowski.app.labs.k8sworkshops.com
    http:
      paths:
      - backend:
          serviceName: pets-cluster
          servicePort: 80
        path: /
  - host: admin-pets-prod-cloudowski.app.labs.k8sworkshops.com
    http:
      paths:
      - backend:
          serviceName: pets-cluster
          servicePort: 8080
        path: /
